some Emmit Abbreviations has been added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-login form
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+</head>
+
+<body>
+   <!-- header section  -->
+
+
+   <!-- ul>li.menu$*3  emmet abbreviotions -->
+   <ul>
+      <li class="menu1"></li>
+      <li class="menu2"></li>
+      <li class="menu3"></li>
+   </ul>
+
+   nav.navbar.navbar-inverse>div.navbar-header>a.navbar-bran{Crazy Fast^ulnavnavbar-nav>li.menu-$*3
+
+</body>
+
+</html>
